test/langtools/tools/javac/nullability/separate/SeparateCompilationTest.out
SeparateCompilationTest.java:13:17: compiler.warn.suspicious.nullness.conversion: java.lang.String!, compiler.misc.type.null
SeparateCompilationTest.java:14:21: compiler.warn.suspicious.nullness.conversion: java.lang.String[]!, compiler.misc.type.null
SeparateCompilationTest.java:15:17: compiler.warn.suspicious.nullness.conversion: java.lang.String!, compiler.misc.type.null
SeparateCompilationTest.java:16:21: compiler.warn.suspicious.nullness.conversion: java.lang.String[]!, compiler.misc.type.null
SeparateCompilationTest.java:17:22: compiler.warn.suspicious.nullness.conversion: java.util.List<java.lang.String>!, compiler.misc.type.null
- compiler.err.warnings.and.werror
1 error
5 warnings
